--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-crush",
+  "name": "@sporeball/node-crush",
   "version": "0.0.0",
   "description": "crush JavaScript files - reduce file size by 20% or more",
   "type": "module",
